[fix] 24.03.21 코드 분석 이슈 해결
Change-Id: I9de77ed00e82c8315f6e6def0385870875ef2e61